# tecapsdesafio2

./: .gitignore  CMakeLists.txt  README.md
src/: desafio2.c  desafio2.h  main.c
test/: CMakeLists.txt  tests_desafio2.c  tests_desafio2.h
